made about sections much easier to read with a new font and line spacing changes. Also fixed missed paragraph formatting.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Vidaloka&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 /* The css for any react image gallery */
 @import "~react-image-gallery/styles/css/image-gallery.css";
 
@@ -263,6 +263,7 @@
   margin-bottom: 10px;
   font-size: 22px;
   text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 #ContainerInstagramIcon{
   display: flex;
@@ -312,7 +313,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
-
+  font-family: 'Roboto', sans-serif;
   margin-top: 20px;
   width: 1000px;
 }
@@ -347,6 +348,7 @@
   justify-content: center;
 }
 #family-about{
+  font-family: 'Roboto', sans-serif;
   font-size: 22px;
   line-height: 1.8;
   width: 1000px;
@@ -379,6 +381,7 @@
 }
 #container-photog-about p{
   width: 1000px;
+  font-family: 'Roboto', sans-serif;
   margin-top: 20px;
   line-height: 1.8;
   font-size: 22px;
@@ -405,18 +408,20 @@
 
 #container-music-about{
   display: flex;
-
   justify-content: center;
   line-height: 1.8;
   margin-bottom: 25px;
 }
+
 #music-about-header{
   text-align: center;
 }
+
 #music-about{
   text-align: center;
   margin-top: 20px;
   width: 1000px;
+  font-family: 'Roboto', sans-serif;
 }
 
 
@@ -530,6 +535,7 @@
   margin-top: 20px;
   width: 1000px;
   line-height: 1.8;
+  font-family: 'Roboto', sans-serif;
 }
 
 
@@ -548,6 +554,8 @@
   margin-top: 20px;
   width: 1000px;
   line-height: 1.8;
+  font-family: 'Roboto', sans-serif;
+
 }
 
 
@@ -751,7 +759,9 @@
     margin-right: auto;
     margin: 0;
   }
-
+  #music-about{
+    line-height: 1.3;
+  }
   #about-img{
     width: 100vw;
   }
@@ -787,6 +797,7 @@
     margin-left: 15px;
     margin-right: 15px;
     width: 90vw;
+    line-height: 1.3;
   }
 
   /* Weddings Page */
@@ -802,6 +813,8 @@
   #weddings-about{
     width: 90vw;
     font-size: 16px;
+    line-height: 1.3;
+
   }
   /* Headshots Page */
   #headshots-about-header{
@@ -809,6 +822,11 @@
   }
   #container-headshots-about{
     font-size: 16px;
+  }
+
+  #headshots-about{
+    line-height: 1.3;
+  width: 90vw;
   }
 
   /* Family Page */
@@ -819,8 +837,11 @@
     font-size: 30px;
   }
   #family-about{
+    
     width: 90vw;
     font-size: 16px;
+    line-height: 1.3;
+    font-family: 'Roboto', sans-serif;
   }
 
   /* Contact Page */
@@ -833,16 +854,19 @@
   }
   .container-contact-body p{
     font-size: 16px;
+    font-family: 'Roboto', sans-serif;
   }
   #container-photog-about h1{
     font-size: 30px;
   }
   #container-photog-about p{
     font-size: 17px;
+    font-family: 'Roboto', sans-serif;
   }
   /* Music Page */
   #music-about{
     width: 90vw;
+    font-family: 'Roboto', sans-serif;
   }
 
   #music-about-header{
